[gd_scene load_steps=6 format=3 uid="uid://dobqv1t27x7au"]

[ext_resource type="Script" path="res://scripts/login_page.gd" id="1_fn7fd"]
[ext_resource type="Theme" uid="uid://c7bseuwmj1pwc" path="res://resources/dark_theme.tres" id="1_gb3cm"]
[ext_resource type="Texture2D" uid="uid://d06ldf2mysyc1" path="res://resources/account.png" id="1_r53gq"]
[ext_resource type="PackedScene" uid="uid://dm26fm3n1yoe6" path="res://scenes/top_bar.tscn" id="1_vvfro"]
[ext_resource type="Script" path="res://scripts/UfrgsConnector.cs" id="5_ye3b3"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gb3cm")
script = ExtResource("1_fn7fd")

[node name="TopBar" parent="." instance=ExtResource("1_vvfro")]
layout_mode = 1
offset_bottom = 43.0
title = "Login Page"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="AccountIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_r53gq")
expand_mode = 4

[node name="UserLine" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_gb3cm")
placeholder_text = "Insira seu cart√£o"
max_length = 8
virtual_keyboard_type = 2
language = "pt_BR"

[node name="PasswordLine" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_gb3cm")
placeholder_text = "Insira sua senha"
virtual_keyboard_type = 6
secret = true

[node name="CheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Salvar dados"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Enviar"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="UfrgsConnector" type="Node" parent="."]
script = ExtResource("5_ye3b3")

[connection signal="toggled" from="CenterContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="Connected" from="UfrgsConnector" to="." method="_on_ufrgs_connector_connected"]
